fix github link being cutoff

--- a/main.css
+++ b/main.css
@@ -58,7 +58,6 @@
   position: absolute;
   right: 10px;
   bottom: 10px;
-  width: 50px;
   font-size: 60px;
 }
 
